--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,7 +1,7 @@
 # application information
 appName : VR
 description : A VR developmnt project
-author : Grathium Industries
+author : Hudson Newey
 version : 1.0
 license : GNU General Public License 3.0
 
